# TGManagementBot

./: .dockerignore  .env.example  .gitignore  .secrets.baseline  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml
deploy/azure/: README.md
deploy/azure/container-apps/: deploy.sh  main.bicep
deploy/azure/container-instances/: deploy.sh
deploy/azure/vm/: cloud-init.yml  deploy-image.sh  deploy-rsync.sh  deploy.sh
src/tgmgmt/: __main__.py  app.py  config.py  logging_setup.py
src/tgmgmt/handlers/: admin.py  chat_member.py  errors.py  guard.py  messages.py
src/tgmgmt/loop_guard/: __init__.py  circuit_breaker.py  dedup.py  depth_tracker.py  middleware.py  rate_limiter.py  timeout.py
src/tgmgmt/services/: allowlist.py  audit.py  redis_client.py
src/tgmgmt/utils/: hashing.py
tests/: conftest.py  test_circuit_breaker.py  test_dedup.py  test_depth_tracker.py  test_loop_guard.py  test_rate_limiter.py  test_timeout.py
